--- a/.github/workflows/build-onecloud.yml
+++ b/.github/workflows/build-onecloud.yml
@@ -1,24 +1,15 @@
-name: Build ImmortalWrt for OneCloud
+name: Build ImmortalWrt for OneCloud S805
 
 on:
-  # 手动触发
   workflow_dispatch:
-  # 定时编译（每周日凌晨2点）
   schedule:
-    - cron: '0 18 * * 0'  # UTC时间，对应北京时间周一凌晨2点
-  # 推送到main分支时触发
-  # push:
-  #   branches:
-  #     - main
+    - cron: '0 18 * * 0'
 
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt
   REPO_BRANCH: master
-  CONFIG_FILE: onecloud.config
-  DIY_SCRIPT: diy-script.sh
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
-  PACKAGED_OUTPUTPATH: ${{ github.workspace }}/output
   TZ: Asia/Shanghai
 
 jobs:
@@ -35,15 +26,10 @@ jobs:
       run: |
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo -E apt-get -qq update
-        sudo -E apt-get -qq install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
-          bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib \
-          git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev libgmp3-dev \
-          libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libpython3-dev libreadline-dev \
-          libssl-dev libtool lrzsz mkisofs msmtp ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 \
-          python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion swig texinfo \
-          uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
-        sudo -E apt-get -qq autoremove --purge
-        sudo -E apt-get -qq clean
+        sudo -E apt-get -qq install -y build-essential clang flex bison g++ gawk \
+          gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev \
+          python3 python3-dev python3-setuptools python3-pip \
+          rsync unzip zlib1g-dev file wget libelf-dev cmake
         sudo timedatectl set-timezone "$TZ"
 
     - name: 克隆源代码
@@ -58,134 +44,132 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
-    - name: 加载自定义配置
+    - name: 加载 OneCloud S805 配置
       run: |
         cd $OPENWRT_PATH
         
-        # 创建 OneCloud 精简版配置文件
+        # 创建精简的 OneCloud 配置
         cat > .config <<EOF
-        CONFIG_TARGET_amlogic=y
-        CONFIG_TARGET_amlogic_meson8b=y
-        CONFIG_TARGET_amlogic_meson8b_DEVICE_thunder-onecloud=y
+        # Target 设置（尝试使用 ARMv7 通用目标）
+        CONFIG_TARGET_armsr=y
+        CONFIG_TARGET_armsr_armv7=y
+        CONFIG_TARGET_MULTI_PROFILE=y
+        CONFIG_TARGET_DEVICE_armsr_armv7_DEVICE_generic=y
         
-        # 基础系统（精简版）
+        # 基础系统
         CONFIG_PACKAGE_luci=y
-        CONFIG_PACKAGE_luci-ssl-openssl=y
+        CONFIG_PACKAGE_luci-ssl=y
         CONFIG_LUCI_LANG_zh_Hans=y
         
-        # 核心功能（只保留必要的）
+        # 核心功能（精简版）
         CONFIG_PACKAGE_luci-app-opkg=y
         CONFIG_PACKAGE_luci-app-firewall=y
         CONFIG_PACKAGE_luci-app-ttyd=y
         
-        # 可选功能（按需启用）
-        # CONFIG_PACKAGE_luci-app-upnp=y
+        # 禁用 Python 相关包（避免依赖问题）
+        # CONFIG_PACKAGE_python3 is not set
+        # CONFIG_PACKAGE_python3-base is not set
+        
+        # 可选插件（按需启用）
         # CONFIG_PACKAGE_luci-app-samba4=y
         # CONFIG_PACKAGE_luci-app-ddns=y
+        # CONFIG_PACKAGE_luci-app-upnp=y
         
-        # 代理工具（按需选择一个）
-        # CONFIG_PACKAGE_luci-app-passwall=y
-        # CONFIG_PACKAGE_luci-app-openclash=y
-        
-        # 镜像格式（使用 squashfs 更省空间）
+        # 镜像格式（生成 tar.gz 用于后续打包）
         CONFIG_TARGET_ROOTFS_SQUASHFS=y
-        CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
-        CONFIG_TARGET_KERNEL_PARTSIZE=32
-        CONFIG_TARGET_ROOTFS_PARTSIZE=512
+        CONFIG_TARGET_ROOTFS_TARGZ=y
+        CONFIG_TARGET_ROOTFS_EXT4FS=y
         
-        # 基础内核模块
+        # 内核模块
         CONFIG_PACKAGE_kmod-usb-core=y
         CONFIG_PACKAGE_kmod-usb-storage=y
         CONFIG_PACKAGE_kmod-fs-ext4=y
-        
-        # 禁用不必要的功能
-        # CONFIG_PACKAGE_luci-app-dockerman is not set
-        # CONFIG_PACKAGE_luci-app-qbittorrent is not set
-        # CONFIG_PACKAGE_luci-app-transmission is not set
-        # CONFIG_PACKAGE_luci-app-aria2 is not set
-        # CONFIG_PACKAGE_luci-app-zerotier is not set
-        # CONFIG_PACKAGE_luci-app-netdata is not set
+        CONFIG_PACKAGE_kmod-fs-vfat=y
         
         EOF
         
-        # 应用配置
         make defconfig
+        
+        # 显示最终配置
+        echo "===== 最终配置预览 ====="
+        grep "^CONFIG_TARGET" .config | head -20
 
     - name: 下载编译依赖
       run: |
         cd $OPENWRT_PATH
+        echo "开始下载依赖包..."
         make download -j16
+        # 检查是否有下载失败的包
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
 
     - name: 编译固件
+      id: compile
       run: |
         cd $OPENWRT_PATH
-        echo -e "$(nproc) thread compile"
-        make -j$(nproc) || make -j1 V=s
+        echo "开始编译（使用 $(nproc) 线程）..."
+        echo "编译开始时间: $(date)"
+        
+        # 先尝试多线程编译
+        make -j$(nproc) V=s 2>&1 | tee build.log || {
+          echo "多线程编译失败，切换到单线程模式..."
+          make -j1 V=s 2>&1 | tee -a build.log
+        }
+        
+        echo "编译结束时间: $(date)"
         echo "status=success" >> $GITHUB_OUTPUT
         echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
-
-    - name: 检查磁盘空间
-      if: (!cancelled())
-      run: df -hT
-
-    - name: 打包 OneCloud 固件
-      uses: ophub/amlogic-s9xxx-openwrt@main
-      if: steps.organize.outputs.status == 'success' && !cancelled()
-      with:
-        openwrt_path: $OPENWRT_PATH/bin/targets/*/*
-        openwrt_board: s805
-        openwrt_kernel: 5.15.1_6.1.1
-        auto_kernel: true
-        kernel_repo: ophub/kernel
-        openwrt_size: 960
-        gh_token: ${{ secrets.GITHUB_TOKEN }}
     
-    - name: 整理打包后的固件
-      id: packagefirm
+    - name: 检查编译结果
+      if: steps.compile.outputs.status == 'success'
       run: |
-        cd ${{ env.PACKAGED_OUTPUTPATH }}
+        cd $OPENWRT_PATH
+        echo "===== 编译输出文件 ====="
+        ls -lh bin/targets/*/* 2>/dev/null || echo "未找到编译输出"
+        
+        # 检查是否有错误
+        if grep -i "error" build.log | grep -v "WARNING" | tail -20; then
+          echo "发现编译错误，请查看完整日志"
+        fi
+
+    - name: 整理固件文件
+      id: organize
+      if: steps.compile.outputs.status == 'success'
+      run: |
+        cd $OPENWRT_PATH/bin/targets/*/*
+        rm -rf packages
         echo "FIRMWARE_PATH=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
         ls -lh
 
     - name: 上传固件到 Artifacts
       uses: actions/upload-artifact@v4
-      if: steps.organize.outputs.status == 'success' && !cancelled()
+      if: steps.organize.outputs.status == 'success'
       with:
         name: ImmortalWrt_OneCloud_${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE_PATH }}
 
     - name: 生成 Release Tag
       id: tag
-      if: env.UPLOAD_RELEASE == 'true' && !cancelled()
+      if: env.UPLOAD_RELEASE == 'true'
       run: |
         echo "release_tag=$(date +"%Y.%m.%d-%H%M")" >> $GITHUB_OUTPUT
         touch release.txt
-        echo "## ImmortalWrt OneCloud 固件" >> release.txt
+        echo "## ImmortalWrt OneCloud S805 固件" >> release.txt
         echo "### 编译时间" >> release.txt
         echo "🕐 $(date +"%Y年%m月%d日 %H:%M:%S")" >> release.txt
-        echo "### 固件信息" >> release.txt
-        echo "- 目标设备: OneCloud (玩客云)" >> release.txt
-        echo "- 内核版本: $(cat $OPENWRT_PATH/include/kernel-version.mk | grep LINUX_VERSION | cut -d'=' -f2)" >> release.txt
+        echo "### 使用说明" >> release.txt
+        echo "1. 下载 rootfs.tar.gz 文件" >> release.txt
+        echo "2. 使用打包工具生成 OneCloud 可刷写镜像" >> release.txt
+        echo "3. 或直接SSH升级替换根文件系统" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
 
     - name: 上传固件到 Release
       uses: softprops/action-gh-release@v2
-      if: steps.tag.outputs.status == 'success' && !cancelled()
+      if: steps.tag.outputs.status == 'success'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: ${{ env.FIRMWARE_PATH }}/*
-
-    - name: 清理旧的 Releases
-      uses: dev-drprasad/delete-older-releases@v0.3.4
-      if: env.UPLOAD_RELEASE == 'true' && !cancelled()
-      with:
-        keep_latest: 5
-        delete_tags: true
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
