--- a/.github/workflows/build-onecloud.yml
+++ b/.github/workflows/build-onecloud.yml
@@ -35,15 +35,33 @@ jobs:
       run: |
         sudo rm -rf /etc/apt/sources.list.d/*
         sudo apt-get update
-        sudo apt-get install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
-          bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib \
-          git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev libgmp3-dev \
-          libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libpython3-dev libreadline-dev \
-          libssl-dev libtool lrzsz mkisofs msmtp ninja-build p7zip p7zip-full patch pkgconf python3 python3-pyelftools \
-          python3-setuptools qemu-utils rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip \
-          vim wget xmlto xxd zlib1g-dev
+        
+        # 分批安装，避免依赖冲突
+        echo "安装基础编译工具..."
+        sudo apt-get install -y build-essential ccache ecj fastjar file g++ gawk \
+          gettext git java-propose-classpath libelf-dev libncurses5-dev \
+          libncursesw5-dev libssl-dev python3 python3-dev python3-distutils \
+          python3-setuptools rsync unzip wget libz-dev
+        
+        echo "安装额外依赖..."
+        sudo apt-get install -y ack antlr3 asciidoc autoconf automake autopoint \
+          binutils bison bzip2 cmake cpio curl device-tree-compiler flex gperf \
+          haveged help2man intltool libc6-dev-i386 libfuse-dev libglib2.0-dev \
+          libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libpython3-dev \
+          libreadline-dev libtool lrzsz mkisofs msmtp ninja-build p7zip p7zip-full \
+          patch pkgconf python3-pyelftools qemu-utils scons squashfs-tools \
+          subversion swig texinfo uglifyjs upx-ucl vim xmlto xxd zlib1g-dev
+        
+        echo "安装文件系统工具..."
         sudo apt-get install -y dosfstools mtools parted
+        
+        echo "设置时区..."
         sudo timedatectl set-timezone "$TZ"
+        
+        echo "验证关键工具..."
+        gcc --version
+        python3 --version
+        docker --version
 
     - name: 克隆 ImmortalWrt 源码
       run: |
@@ -158,15 +176,30 @@ jobs:
       run: |
         cd $OPENWRT_PATH
         echo "===== 编译产物 ====="
-        find bin/targets -type f -ls
+        find bin/targets -type f -name "*.tar.gz" -o -name "*.img.gz" | sort
         
-        ROOTFS=$(find bin/targets -name "*rootfs.tar.gz" | head -n 1)
+        echo ""
+        echo "===== 查找 rootfs.tar.gz ====="
+        ROOTFS=$(find bin/targets -name "*rootfs.tar.gz" 2>/dev/null | head -n 1)
+        
         if [ -z "$ROOTFS" ]; then
-          echo "错误：未找到 rootfs.tar.gz"
-          exit 1
+          echo "⚠️  未找到 rootfs.tar.gz 文件"
+          echo "可用的文件："
+          ls -lh bin/targets/armsr/armv7/
+          
+          # 尝试使用 ext4 rootfs 作为替代
+          ROOTFS=$(find bin/targets -name "*ext4-rootfs.img.gz" | head -n 1)
+          if [ -n "$ROOTFS" ]; then
+            echo "✅ 找到替代文件: $ROOTFS"
+            echo "将使用此文件进行打包"
+          else
+            echo "❌ 错误：未找到任何可用的 rootfs 文件"
+            exit 1
+          fi
+        else
+          echo "✅ 找到 rootfs: $ROOTFS"
         fi
         
-        echo "找到 rootfs: $ROOTFS"
         ls -lh "$ROOTFS"
         echo "ROOTFS_PATH=$ROOTFS" >> $GITHUB_ENV
 
@@ -179,9 +212,45 @@ jobs:
         # 克隆 soulteary 的 u-boot 项目
         echo "下载 OneCloud u-boot 工具..."
         git clone --depth 1 https://github.com/soulteary/onecloud-u-boot.git
+        cd onecloud-u-boot
         
-        # 复制 rootfs 到打包目录
-        cp $ROOTFS_PATH onecloud-u-boot/
+        # 创建 openwrt 目录
+        mkdir -p openwrt
+        
+        # 检查是否存在 tar.gz 格式的 rootfs
+        if [ -f "$ROOTFS_PATH" ] && [[ "$ROOTFS_PATH" == *.tar.gz ]]; then
+          echo "✅ 找到 tar.gz 格式的 rootfs，直接解压"
+          tar -xzf "$ROOTFS_PATH" -C openwrt/
+        else
+          echo "⚠️  未找到 tar.gz 格式，需要从镜像中提取文件系统"
+          
+          # 查找 ext4 rootfs 镜像
+          EXT4_IMG=$(find $OPENWRT_PATH/bin/targets -name "*ext4-rootfs.img.gz" | head -n 1)
+          
+          if [ -z "$EXT4_IMG" ]; then
+            echo "❌ 错误：未找到可用的 rootfs 文件"
+            exit 1
+          fi
+          
+          echo "使用 ext4 镜像: $EXT4_IMG"
+          
+          # 解压 .img.gz
+          gunzip -c "$EXT4_IMG" > rootfs.img
+          
+          # 挂载 ext4 镜像并复制文件
+          echo "挂载镜像并提取文件系统..."
+          sudo mkdir -p /mnt/rootfs
+          sudo mount -o loop rootfs.img /mnt/rootfs
+          sudo cp -a /mnt/rootfs/* openwrt/
+          sudo umount /mnt/rootfs
+          rm -f rootfs.img
+          
+          echo "✅ 文件系统提取完成"
+        fi
+        
+        # 检查提取结果
+        echo "===== 提取的文件系统内容 ====="
+        ls -lh openwrt/ | head -20
         
         echo "PACK_DIR=$GITHUB_WORKSPACE/package" >> $GITHUB_ENV
 
